Closed Bug 246271 Opened 21 years ago Closed 21 years ago

treecell does not respond immediately to src attribute changes

Categories

(Core :: XUL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: darin.moz, Assigned: neil)

Details

Attachments

(1 file)

treecell does not respond immediately to src attribute changes. if i have a treecell and i try to change the src attribute, it does not seem to take affect until the xul window is repainted. neil had this to say on irc: <NeilAlmostZZZ> darin: see nsTreeContentView.cpp line 860ish <NeilAlmostZZZ> darin: src isn't in the list of watched attributes i noticed this bug in a 1.7 branch linux build.
Attached patch Proposed patchSplinter Review
Assignee: varga → neil.parkwaycc.co.uk
Status: NEW → ASSIGNED
Attachment #150480 - Flags: superreview?(darin)
Attachment #150480 - Flags: review?(varga)
Comment on attachment 150480 [details] [diff] [review] Proposed patch r=varga
Attachment #150480 - Flags: review?(varga) → review+
Attachment #150480 - Flags: superreview?(darin) → superreview+
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Component: XP Toolkit/Widgets: Trees → XUL
QA Contact: xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: