Bug 246271 treecell does not respond immediately to src attribute changes r=varga sr=darin